----------------------------------------------------------------------
 OmegaT 2.1.7 update 1
----------------------------------------------------------------------
  1 Enhancement
  1 Bugfix
----------------------------------------------------------------------
2.1.7 update 1 vs. 2.1.7

  Implemented requests:

  - Highlight search results
  http://sourceforge.net/support/tracker.php?aid=2956986

  Bug fixes:

  - Some search options widgets do not set focus to Search field
  http://sourceforge.net/support/tracker.php?aid=3013796

----------------------------------------------------------------------
 OmegaT 2.1.7
----------------------------------------------------------------------
  8 Enhancements
  2 Bugfixes
----------------------------------------------------------------------
2.1.7 vs. 2.1.6

  Implemented requests:

  - Sort Project Files according to locale
  http://sourceforge.net/support/tracker.php?aid=3002616

  - Remember advanced search settings
  http://sourceforge.net/support/tracker.php?aid=2997454

  - Add source/target selection to the search window
  http://sourceforge.net/support/tracker.php?aid=2860161

  Other enhancements:

  - OpenXML filter: option to translate slide layouts in PowerPoint presentations

  - OpenOffice.org filter: option to translate links (URL)

  - Various enhancements in the manual

  - Catalan localisation updated to 2.1.4 (UI, Readme, Instant Start, documentation)
  - Hungarian localisation updated to 2.1.x (UI, Readme, Instant Start, documentation)

  Bug fixes:

  - Project Files list not sorted on some systems
  http://sourceforge.net/support/tracker.php?aid=3000377

  - Cursor jumps to end of selection during Shift+left
  http://sourceforge.net/support/tracker.php?aid=3006297


----------------------------------------------------------------------
 OmegaT 2.1.6
----------------------------------------------------------------------
  2 Enhancements
  2 Bugfixes